# ED-II

./: .gitignore  burra_ponteiro.c
Trabalho 1/: CMakeLists.txt  README.md  filmes.c  filmes.h  main.c
Trabalho 1/arvore/: rubro-negra.c  rubro-negra.h
Trabalho 2/: CMakeLists.txt
Trabalho 2/Files/: ExemploArvore.txt
